--- a/index.html
+++ b/index.html
@@ -3,8 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>阮胜的简历</title>
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+        *{
+            margin:0px;
+            padding:0px;
+        }
+    </style>
 </head>
 <body>
-    
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">Apidoc</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="/apidoc/index">阮胜的简历</a></li>  <!-- <li class="active"><a href="#">Link</a></li> -->
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><?php echo $base_admininfo['username'];?><span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/admin/setting"><i class="halflings-icon user"></i> 设置</a></li>
+                            <?php if($base_admininfo['super'] == 1) {?>
+                            <li><a href="/admin/manage"><i class="halflings-icon user"></i> 管理中心</a></li>
+                            <?php }?>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/admin/logout">退出</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+
+
 </body>
+<script src="/res/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
 </html>
