--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
             margin:0px;
             padding:0px;
         }
+        .title-center {
+            width:100%;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
+        <div class="container-fluid title-center">
             <div class="navbar-header">
-                <a class="navbar-brand text-center" href="/">阮胜的简历</a>
+                <p class="navbar-brand">阮胜的简历</p>
             </div>
         </div>
     </nav>
