--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid title-center">
             <div class="navbar-header">
-                <p class="navbar-brand">阮胜的简历</p>
+                <a class="navbar-brand" href="javascript:void(0);">阮胜的简历</a>
             </div>
         </div>
     </nav>
