--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid title-center">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="javascript:void(0);">阮胜的简历</a>
+        <div class="container-fluid">
+            <div class="navbar-header title-center">
+                <a class="navbar-brand title-center" href="javascript:void(0);">阮胜的简历</a>
             </div>
         </div>
     </nav>
